tests/value/value.exp
Error: value.js:3
  3: var y:string = o["x"];
                    ^^^^^^ number. This type is incompatible with
  3: var y:string = o["x"];
           ^^^^^^ string

Error: value.js:6
  6: table["x"] = "hello";
                  ^^^^^^^ string. This type is incompatible with
  6: table["x"] = "hello";
     ^^^^^^^^^^ number


Found 2 errors
